--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,19 @@
 <html>
 <head>
   <title>SourceHero</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <div class="containter">
+    <ul class="nav nav-tabs">
+      <li><%= link_to "Home", root_path, class: "nav nav-links"%></li>
+      <li><%= link_to "About", welcome_about_path, class: "nav nav-links"%></li>
+    </ul>
+    <%= yield %>
+  </div>
 
 </body>
 </html>
