--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="jumbotron text-center">
+  <h1>Welcome to Source Hero!</h1>
+  <p>Your online hero for your favorite resources<p>
+</div>
+
+<div class="row text-center">
+  <div class="col-md-6">
+    <h4>Store your favorite resources in one place!</h4>
+      <li>No more cluttering your toolbar!</li>
+      <li>No more sticky notes!</li>
+  </div>
+  <div class="col-md-6">
+    <h4>Organize them by topics or categories!</h4>
+      <li>Know exactly where each resource can be found!</li>
+      <li>Be more productive!</li>
+  </div>
+</div>
