--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,3 +8,11 @@
   padding-right: 10px;
   padding-left: 10px;
 }
+
+.user-info {
+ margin-top: 5px;
+ margin-left: auto;
+ text-align: right;
+ padding-right: 10px;
+ padding-left: 10px;
+}
