--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", root_path, class: "nav nav-links"%></li>
       <li><%= link_to "About", welcome_about_path, class: "nav nav-links"%></li>
+      <li><%= link_to "My Resources", topics_path, class: "nav nav-links"%></li>
 
       <div class="user-info">
         <% if user_signed_in? %>
