--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <div class="containter">
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", root_path, class: "nav nav-links"%></li>
-      <li><%= link_to "About", welcome_about_path, class: "nav nav-links"%></li>
+      <li><%= link_to "About", about_path, class: "nav nav-links"%></li>
       <li><%= link_to "My Resources", topics_path, class: "nav nav-links"%></li>
 
       <div class="user-info">
