--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,5 +1,10 @@
 <div class="text-center">
-  <h1>Topics</h1>
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Topics</h1>
+      <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
+    </div>
+  </div>
       <h4 class="media-heading">
         <% @topics.each do |topic| %>
           <%= link_to topic.title, topic %><br>
