--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Topics#show</h1>
-<p>Find me in app/views/topics/show.html.erb</p>
+<div class="text-center">
+  <h1><%= @topic.title %></h1>
+  <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+  <%= link_to "Delete Topic", @topic, class: 'btn btn-danger', method: :delete, data: { confirm: "Are you sure you want to delete this topic?" } %>
+  <p>
+  <% @topic.bookmarks.each do |b| %>
+  <%= link_to b.url, b.url %><br />
+  <% end %>
+  </p>
+</div>
