--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,10 +1,17 @@
 <div class="text-center">
-  <h1><%= @topic.title %></h1>
-  <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
-  <%= link_to "Delete Topic", @topic, class: 'btn btn-danger', method: :delete, data: { confirm: "Are you sure you want to delete this topic?" } %>
-  <p>
-  <% @topic.bookmarks.each do |b| %>
-  <%= link_to b.url, b.url %><br />
-  <% end %>
-  </p>
+  <div class="col-md-16">
+    <h1><%= @topic.title %></h1>
+      <small>
+      <%= link_to "Edit Topic", edit_topic_path %> -
+      <%= link_to "Delete Topic", @topic, method: :delete, data: { confirm: "Are you sure you want to delete this topic?" } %>
+      </small>
+    </div>
+    <div>
+      <%= link_to "New Bookmark", new_topic_bookmark_path(@topic), class: 'btn btn-success' %>
+      <p>
+      <% @topic.bookmarks.each do |b| %>
+      <%= link_to b.name, [b.topic, b] %> - <%= link_to b.url, b.url %><br />
+      <% end %>
+      </p>
+    </div>
 </div>
