--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <div class="col-md-6 text-center">
+  <div class="text-center">
   <h1>New Bookmark</h1>
   <%= form_for [@topic, @bookmark] do |f| %>
     <div class="form-group">
