--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,10 +1,14 @@
-<div class="text-center">
-  <h1>Edit Topic</h1>
-    <div class="form">
-      <%= form_for @topic do |f| %>
-      <%= f.label :title %>
-      <%= f.text_field :title, placeholder: "Title" %>
-      <%= f.submit "Save", class: 'btn btn-success' %>
-      <% end %>
-    </div>
+<div class="container">
+  <div class="text-center">
+    <h1>Edit Topic</h1>
+      <div class="form-group">
+        <%= form_for @topic do |f| %>
+        <%= f.label :title %>
+        <%= f.text_field :title, placeholder: "Title" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Save", class: 'btn btn-success' %>
+        <% end %>
+      </div>
+  </div>
 </div>
