--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -3,7 +3,7 @@
     <div class="form">
       <%= form_for @topic do |f| %>
       <%= f.label :title %>
-      <%= f.text_field :title, placeholder: "Title" %>
+      <%= f.text_field :title, placeholder: "Title", autofocus: true %>
       <%= f.submit "Save", class: 'btn btn-success' %>
       <% end %>
     </div>
