--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,17 @@
  padding-right: 10px;
  padding-left: 10px;
 }
+
+#bookmark-list {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+h1 {
+  margin-bottom: 0;
+}
+
+button {
+  margin-left: 5px;
+  margin-right: 5px;
+}
