--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="text-center">
-  <div class="col-md-6 text-center">
+<div class="container">
+  <div class="text-center">
   <h1>Edit Bookmark</h1>
   <%= form_for [@topic, @bookmark] do |f| %>
     <div class="form-group">
@@ -14,4 +14,5 @@
       <%= f.submit "Save", class: "btn btn-success" %>
     </div>
   <% end %>
+  <%= button_to "Delete bookmark", [@topic, @bookmark], method: :delete, class: 'btn btn-danger', data: {confirm: "Are you sure you want to delete this bookmark?"} %>
   </div>
