--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="container">
   <div class="text-center">
   <h1>New Bookmark</h1>
   <%= form_for [@topic, @bookmark] do |f| %>
