--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", root_path, class: "nav nav-links"%></li>
       <li><%= link_to "About", about_path, class: "nav nav-links"%></li>
-      <li><%= link_to "My Resources", topics_path, class: "nav nav-links"%></li>
+      <li><%= link_to "Resources", topics_path, class: "nav nav-links"%></li>
+      <% if user_signed_in? %>
+        <li><%= link_to "Profile", user_path(current_user.id), class: "nav nav-links"%></li>
+      <% end %>
 
       <div class="user-info">
         <% if user_signed_in? %>
