--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,14 +1,17 @@
 <div class="container">
   <div class="text-center">
-    <h1>Edit Topic</h1>
-      <div class="form-group">
-        <%= form_for @topic do |f| %>
-        <%= f.label :title %>
-        <%= f.text_field :title, placeholder: "Title" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Save", class: 'btn btn-success' %>
-        <% end %>
-      </div>
+  <h1>Edit Topic</h1>
+  <%= form_for @topic do |f| %>
+    <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control', placeholder: "Title" %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Save", class: 'btn btn-success' %>
+      <% end %>
+    </div>
+    <div>
+      <%= button_to "Delete Topic", @topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic?' }, class: 'btn btn-danger btn-small' %>
+    </div>
   </div>
 </div>
